@@ -29,6 +29,10 @@ choose-mirror (0.031) UNRELEASED; urgency=low
       errors
     - Ran templates file generation and debconf-updatepo (sorry, translators)
 
+   * Stephen R. Marenka
+    - Added proxy support for wget in validate_mirror.
+    - Added debug logging for wget command string.
+
  -- Christian Perrier <bubulle@debian.org>  Tue, 17 Feb 2004 08:59:09 +0100
 
 choose-mirror (0.030) unstable; urgency=low
